# kaneko-adk

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
.github/: copilot-instructions.md
examples/adk/aws/: agent.py
examples/adk/local_data_agent/: README.md  __init__.py  agent.py  main.py  pyproject.toml
examples/gpts/local_data_agent/: .gitignore  Dockerfile  README.md  deploy.sh  main.py  pyproject.toml
kaneko_adk/: agents.py  callbacks.py
kaneko_adk/tools/: execute_sql.py  ttest.py
kaneko_adk/tools/show_chart/: __init__.py  _auto_generated_bar_schema.json  _auto_generated_gemini_schema.json  auto_generated_gemini_models.py  tool.py
scripts/: download_data.py
scripts/vega-lite/: .gitignore  REAMD.md  config.py  converter.py  generate_code.py
scripts/vega-lite/config/: bar.py
tests/: test_agents.py
tests/tables/: distribution_centers.json  events.json  inventory_items.json  order_items.json  orders.json  products.json  sql.csv  tables.jsonl  users.json
tests/tables/data/: distribution_centers.csv  events.csv  inventory_items.csv  order_items.csv  orders.csv  products.csv  users.csv
