[tool.poetry]
name = "kaneko-adk"
version = "0.1.0"
description = "Google ADK を利用する際のライブラリをまとめました。"
authors = ["tai.kaneko <tai.kaneko@datacurrent.co.jp>"]
readme = "README.md"
packages = [
    { include = "./kaneko_adk" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
google-adk = ">=1.13.0,<2.0.0"
ibis-framework = {version=">=10.8.0,<11.0.0", extras=["duckdb"]}
db-dtypes = ">=1.4.3,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
jsonpath-ng = "^1.7.0"
google-cloud-bigquery-storage = "^2.32.0"
google-cloud-bigquery = "^3.36.0"
datamodel-code-generator = "^0.33.0"

[tool.isort]
profile = "google"

