[project]
name = "local-data-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "tai.kaneko",email = "tai.kaneko@datacurrent.co.jp"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "geopandas (>=1.1.1,<2.0.0)",
    "streamlit (>=1.49.1,<2.0.0)",
    "google-adk (>=1.13.0,<2.0.0)",
    "ibis-framework[duckdb] (>=10.8.0,<11.0.0)",
    "db-dtypes (>=1.4.3,<2.0.0)",
    "sqids (>=0.5.2,<0.6.0)",
    "fsspec (>=2025.7.0,<2026.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
kaneko-adk = {path = "../../../", develop = true}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
google-cloud-bigquery-storage = "^2.32.0"
google-cloud-bigquery = "^3.36.0"

