[tool.poetry]
name = "local-data-agent"
version = "0.1.0"
description = ""
authors = ["tai.kaneko <tai.kaneko@datacurrent.co.jp>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
uvicorn = ">=0.35.0,<0.36.0"
geopandas = ">=1.1.1,<2.0.0"
kaneko-adk = { path = "../../../", develop = true }


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

